Switch back to Quilt. TODO: Quilt hash mojmap support. TODO: Reimplement QSL.